--- a/mechanical-metal/package.json
+++ b/mechanical-metal/package.json
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.9.2"
+    "@astrojs/svelte": "^7.1.0",
+    "astro": "^5.9.2",
+    "svelte": "^5.34.7",
+    "typescript": "^5.8.3"
   }
 }
